--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-torch==2.5+cpu
+torch==2.5.1+cpu
 torchvision==0.24.1+cpu
-torchaudio==2.5.1+cpu
+# torchaudio removed (not needed)
+
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
@@ -141,5 +142,6 @@ Werkzeug==3.1.3
 wheel==0.45.1
 yarl==1.20.1
 zstandard==0.23.0
+
 
 
