--- a/Flask Deployed App/requirements.txt
+++ b/Flask Deployed App/requirements.txt
@@ -1,9 +1,10 @@
 Flask==3.0.0
 gunicorn==21.2.0
 numpy==1.26.4
-pandas==2.2.0
+#pandas==2.2.0
 Pillow==10.1.0
 
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.2.0+cpu
 torchvision==0.17.0+cpu
+
